--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--
 	Copyright 2014 Git. Training
  -->
-<head>
+<head>+
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I just trying to learn git
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git training 2014</p>
 	</footer>
 </body>
 </html>
