--- a/simple.html
+++ b/simple.html
@@ -19,6 +19,7 @@
 		<p>
 			Just some content
 		</p>
+		<p> A new paragragh just to xreate a conflict with the new realwork branch</p>
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2014</p>
